--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         padding: 2em;
         line-height: 1.6;
       }
-      .box {
-        background-color: #eef6ff;
-        border-left: 4px solid #1e90ff;
+      .theorem {
+        background-color: #ee7777;
+        border-left: 4px solid #ee0000;
         padding: 1em;
         margin: 1em 0;
       }
@@ -42,9 +42,13 @@
     <p>This is a block equation:</p>
     $$ \int_{-\infty}^\infty e^{-x^2} \, dx = \sqrt{\pi} $$
 
-    <div class="box">
+    <div class="theorem">
       <strong>Theorem:</strong> Every bounded sequence has a convergent
       subsequence.
+    </div>
+
+    <div class="definition">
+      Let $X$ be a nonmepty set and $\ast:X^2\to X$ an operation on $X$.
     </div>
 
     <p><a href="#next">Go to next section</a></p>
