--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
         padding: 2em;
         line-height: 1.6;
       }
-      .theorem {
-        background-color: #ee7777;
+      .thm {
+        background-color: #ff7777;
         border-left: 4px solid #ee0000;
         padding: 1em;
+        margin: 1em 0;
+      }
+      .def {
+        background-color: #77ff77;
+        border-left: 4px solid #008800 padding 1em;
         margin: 1em 0;
       }
       a {
@@ -42,12 +47,12 @@
     <p>This is a block equation:</p>
     $$ \int_{-\infty}^\infty e^{-x^2} \, dx = \sqrt{\pi} $$
 
-    <div class="theorem">
+    <div class="thm">
       <strong>Theorem:</strong> Every bounded sequence has a convergent
       subsequence.
     </div>
 
-    <div class="definition">
+    <div class="def">
       Let $X$ be a nonmepty set and $\ast:X^2\to X$ an operation on $X$.
     </div>
 
