--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       }
       .def {
         background-color: #77ff77;
-        border-left: 4px solid #008800 padding 1em;
+        border-left: 4px solid #008800;
+        padding: 1em;
         margin: 1em 0;
       }
       a {
