--- a/index.html
+++ b/index.html
@@ -42,19 +42,18 @@
     ></script>
   </head>
   <body>
-    <h1 id="intro">Introduction</h1>
-    <p>This is inline math: $a^2 + b^2 = c^2$</p>
+    <h1 id="unit1">Unit 1: Real Number Axioms</h1>
+    <h2 id="lesson0002">0002 Groups</h2>
 
-    <p>This is a block equation:</p>
-    $$ \int_{-\infty}^\infty e^{-x^2} \, dx = \sqrt{\pi} $$
+    <div class="def" id="groupdef">
+      Let $X$ be a nonmepty set and $\ast:X^2\to X$ an operation on $X$. If
+      $e\in X$ is such that $$ \forall x \in X, \quad x\ast e = e\ast x = x $$
+      then we say that $e$ is an <b>identity for $\ast$</b>.
+    </div>
 
     <div class="thm">
       <strong>Theorem:</strong> Every bounded sequence has a convergent
       subsequence.
-    </div>
-
-    <div class="def">
-      Let $X$ be a nonmepty set and $\ast:X^2\to X$ an operation on $X$.
     </div>
 
     <p><a href="#next">Go to next section</a></p>
