--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       1. $\ast$ is an associative operation. <br>
       
       2. There is an
-      identity for
+      identity for $\ast$.
+
+      3. Each $x\in G$ has an inverse element.
     </div>
 
     <div class="thm">
