building reference page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     ></script>
   </head>
   <body>
+    Welcome to the reference page of <i>A Course in Real Analysis</i>.  This page is intended to hold only a dense collection of facts with no explanation -- i.e. this page is not intended for teaching or learning, but only for <i>reference</i>. <br>
+
+    The pedagogical portion of the course is hosted at this GitHub repository:  <a href="https://www.github.com/axiomtutor/acira">A Course in Real Analysis ... in Marimo!</a>
     <h1 id="unit1">Unit 1: Real Number Axioms</h1>
     <h2 id="lesson0002">0002 Groups</h2>
 
