--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
       1. $\ast$ is an associative operation. <br>
       
       2. There is an
-      identity for $\ast$.
+      identity for $\ast$.<br>
 
       3. Each $x\in G$ has an inverse element.
     </div>
+
+    <!--
 
     <div class="thm">
       <strong>Theorem:</strong> Every bounded sequence has a convergent
@@ -83,5 +85,6 @@
 
     <h2 id="next">Next Section</h2>
     <p>Back to <a href="#intro">Introduction</a></p>
+    -->
   </body>
 </html>
