--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
       </ul>
     </div>
 
+    <div class="thm" id="assocOpUniqIdNInv">
+      Theorem: <tt>Assoc. op. Uniq. Id. & Inv.</tt>
+
+      Let $X$ be any nonempty set and $\ast:X^2\to X$ an associative operation on $X$.  Assume $e\in X$ is an identity element, and $a\in X$ has an inverse element $a^{-1}$.
+
+      Then $e$ is the unique identity for $\ast$.  Also $a^{-1}$ is the unique inverse of $a$.
+    </div>
+
     <!--
 
     <div class="thm">
