--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       The identity and inverse elements of an associative operation are unique.
     </div>
 
+    <details> <summary>Statement and proof.</summary>
     
     <i>Statement</i>: Let $X$ be a nonempty set and $\ast: X^2\to X$ be an associative operation on $X$.  Assume that $e\in X$ is an identity element for $\ast$.  Let $a\in X$ have an inverse element $a^{-1}\in X$.<br>
 
@@ -116,14 +117,21 @@
 
     $\Box$
 
+    </details>
+
     <div class="thm">
       Theorem: <tt>Group Uniq. Id. & Inv.</tt> <br>
 
       In a group, the identity and inverses are unique.
     </div>
 
+    <details><summary>Statement and proof.</summary>
     <i>Statement</i>: Let $(G,\ast)$ be a group with identity $e$.  Then $e$ is the unique identity element.  Also, for each $x\in G$, the inverse $x^{-1}$ is unique.  <br>
 
     <i>Proof</i>: Because the operation of any group is associative, therefore these elements are unique by the <tt>Assoc. Op. Uniq. Id. & Inv.</tt> theorem.
+
+    $\Box$
+
+    </details>
   </body>
 </html>
