--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     
     <i>Statement</i>: Let $X$ be a nonempty set and $\ast: X^2\to X$ be an associative operation on $X$.  Assume that $e\in X$ is an identity element for $\ast$.  Let $a\in X$ have an inverse element $a^{-1}\in X$.<br>
 
-    Then $e$ is the unique element with the identity property.  Also $a^{-1}$ is the unique element with the property of the inverse of $a$.  
+    Then $e$ is the unique element with the identity property.  Also $a^{-1}$ is the unique element with the property of the inverse of $a$.  <br><br>
 
     <i>Proof</i>: Let $y\in X$ have the property of the identity.  Then 
 
@@ -126,9 +126,9 @@
     </div>
 
     <details><summary>Statement and proof.</summary>
-    <i>Statement</i>: Let $(G,\ast)$ be a group with identity $e$.  Then $e$ is the unique identity element.  Also, for each $x\in G$, the inverse $x^{-1}$ is unique.  <br>
+    <i>Statement</i>: Let $(G,\ast)$ be a group with identity $e$.  Then $e$ is the unique identity element.  Also, for each $x\in G$, the inverse $x^{-1}$ is unique.  <br><br>
 
-    <i>Proof</i>: Because the operation of any group is associative, therefore these elements are unique by the <tt>Assoc. Op. Uniq. Id. & Inv.</tt> theorem.
+    <i>Proof</i>: Because the operation of any group is associative, therefore these elements are unique by the <tt>Assoc. Op. Uniq. Id. & Inv.</tt> theorem. <br>
 
     $\Box$
 
