--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       2. There is an
       identity for $\ast$.<br>
 
-      3. Each $x\in G$ has an inverse element.
+      3. Each $x\in G$ has an inverse element. <br>
 
-      We abbreviate $x\ast y$ as $xy$ and we abbreviate $x y^{-1}$ as $x/y$.
+      We abbreviate $x\ast y$ as $xy$ and we abbreviate $x y^{-1}$ as $x/y$. <br>
 
       For any $n\in\Bbb N$ we abbreviate 
       
