--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
       set with an operation $\ast:G^2\to G$ then we say that $G$ is a
       <b>group</b> if <br>
       
-      1. $\ast$ is an associative operation. <br>
+      <ol>
+        <li>$\ast$ is an associative operation. </li>
       
-      2. There is an
-      identity for $\ast$.<br>
+        <li>There is an
+      identity for $\ast$.</li>
 
-      3. Each $x\in G$ has an inverse element. <br>
+        <li>Each $x\in G$ has an inverse element. </li>
+      </ol>
 
       We abbreviate $x\ast y$ as $xy$ and we abbreviate $x y^{-1}$ as $x/y$. <br>
 
