--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
       </ul>
     </div>
 
+    <p> In all that follows, assume that $(G,\ast)$ is a group and $x\in G$. </p>
+
     <div class="thm" id="assocOpUniqIdNInv">
       Theorem: <tt>Assoc. Op. Uniq. Id. & Inv.</tt> <br>
 
@@ -134,6 +136,21 @@
 
     $\Box$
 
+    </details>
+
+    <div class="thm">
+      Theorem: <tt>Group inv. inv.</tt> <br>
+
+      $(x^{-1})^{-1} = x$
+    </div>
+
+    <details><summary>Statement and proof.</summary>
+    <i>Statement</i>: $(x^{-1})^{-1} = x$. <br><br>
+    <i>Proof</i>:  $xx^{-1} = e$ by definition of the inverse.
+
+      Then $(x^{-1})^{-1} = x$ by the `Group Uniq. Id. & Inv.` theorem.
+
+      $\Box$
     </details>
   </body>
 </html>
