--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 
     <details><summary>Statement and proof.</summary>
     <i>Statement</i>: $(x^{-1})^{-1} = x$. <br><br>
-    <i>Proof</i>:  $xx^{-1} = e$ by definition of the inverse.
+    <i>Proof</i>:  $xx^{-1} = e$ by definition of the inverse. <br>
 
-      Then $(x^{-1})^{-1} = x$ by the `Group Uniq. Id. & Inv.` theorem.
+      Then $(x^{-1})^{-1} = x$ by the `Group Uniq. Id. & Inv.` theorem. <br>
 
       $\Box$
     </details>
