--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <i>Statement</i>: $(x^{-1})^{-1} = x$. <br><br>
     <i>Proof</i>:  $xx^{-1} = e$ by definition of the inverse. <br>
 
-      Then $(x^{-1})^{-1} = x$ by the `Group Uniq. Id. & Inv.` theorem. <br>
+      Then $(x^{-1})^{-1} = x$ by the <tt>Group Uniq. Id. & Inv.</tt> theorem. <br>
 
       $\Box$
     </details>
