--- a/index.html
+++ b/index.html
@@ -238,9 +238,22 @@
           \overbrace{x^{-1}x^{-1}\cdots x^{-1}}^{-m-n} &= x^{m+n}
         \end{aligned}$$ 
       </details>
-    </details>
 
-    $\Box$
+      <details>
+        <summary>Case 4: $m \le n < 0$.</summary>
+
+        Suppose $m \le n < 0$.  Then 
+        $$\begin{alinged}
+          x^m x^n &= \overbrace{x^{-1}x^{-1}\cdots x^{-1}}^{-m} \overbrace{x^{-1}x^{-1}\cdots x^{-1}}^{-n+(-m)} \\
+          &= x^{m+n}
+        \end{aligned}$$
+      </details>
+
+      Since the above exhausts all cases, we have now shown
+      $$ x^mx^n = x^{m+n}$$
+
+      $\Box$
+    </details>
 
   </body>
 </html>
