--- a/index.html
+++ b/index.html
@@ -252,6 +252,16 @@
       Since the above exhausts all cases, we have now shown
       $$ x^mx^n = x^{m+n}$$
 
+      Now to show $(x^m)^n$:
+
+      <details><summary>Case 1: $m$ or $n$ is 0.</summary>
+        If $m=0$ then $(x^m)^n = e^n = e$.  If $n=0$ then immediately $(x^m)^n = e$.
+      </details>
+      <details>
+        <summary>Case 2: $0 < m$.</summary>
+        Suppose $0<m$.  Then 
+      </details>
+
       $\Box$
     </details>
 
