--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     For the rest of this section, assume that $(R,+,\times)$ is a ring.
 
     <div class="thm">
-      Theorem: <tt>Ring uniq. ids. & invs.</tt>
+      Theorem: <tt>Ring uniq. ids. & invs.</tt> <br>
 
       The identities and inverses in a ring, if they exist, are unique.
     </div>
@@ -337,7 +337,7 @@
     </details>
 
     <div class="thm">
-      Theorem: <tt>Ring zero annihilates</tt> <br>
+      Theorem: <tt>Ring zero annihilates</tt> <br> 
 
       Zero times anything is zero.
     </div>
@@ -363,6 +363,31 @@
       Therefore the equation above simplifies to 
 
       $$ 0 = 0x $$ 
+
+      The proof that $0 = x0$ is <i>mutatis mutandis</i> the same on the other side.
+
+      $\Box$
+    </details>
+
+    <div class="thm">
+      Theorem: <tt>Ring -1 negates</tt> <br>
+      $-x = (-1)x$
+    </div>
+    <details>
+      <summary>Statement and proof.</summary>
+
+      <i>Statement</i>: $\forall x\in R, \quad -x = (-1)x = x(-1)$.
+
+      <i>Proof</i>: Let $x\in R$.  
+
+      $$\begin{aligned}
+        x+(-1)x &= (1)x+(-1)x \\
+        &= (1-1)x \\
+        &= 0x \\
+        &= 0
+      \end{aligned}$$
+
+      The proof that $-x = x(-1)$ is <i>mutatis mutandis</i> the same on the other side.
 
       $\Box$
     </details>
