--- a/index.html
+++ b/index.html
@@ -431,6 +431,8 @@
       If $\preceq$ is a partial order, then we define the relation $\prec\subseteq X^2$ by 
 
       $$ a\prec b \quad \Leftrightarrow \quad a \prec b, \text{ and } a\ne b, \quad \forall a,b\in X $$
+
+      To pronounce $a\prec b$ we say "$a$ precedes $b$".  The expression $a\succ b$ is syntactic sugar for $b\prec a$ and we say that "$a$ succeeds $b$".
     </div>
 
   </body>
